tests/test_proof/good/output/no_vars.catala_en.Proof
[RESULT] No two exceptions to ever overlap for variable A.x
[RESULT] Variable A.x never returns an empty error
